# DeviceController

./: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py
CommonUtility/: CMakeLists.txt  NetUtility.cpp  NetUtility.h
DomainModel/: CMakeLists.txt
OSMonitor/: CMakeLists.txt
UnitTest/: CMakeLists.txt  UTLoger.cpp  UTService.cpp
WebApi/: CMakeLists.txt  main.cpp  web.json
WebApi/controllers/: DeviceInformation.cpp  DeviceInformation.h  IPManager.cpp  IPManager.h  IndexPage.cpp  IndexPage.h
WebApi/views/: BasicInfo.csp  DeviceInfo.csp  IPManager.csp  IndexPage.csp
